--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,20 +7,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
+    <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/templatemo.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href=" {% static 'css/templatemo.css' %}">
+    <link rel="stylesheet" href=" {% static 'css/custom.css' %}">
 
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-
-    <!-- Load map styles -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
 </head>
 
 <body>
@@ -73,10 +72,10 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                           {% if user.is_authenticated %}
-                            <li class="nav-item"><a href="{% url 'first:logout' %}">Logout</a></li>
+                            <li class="nav-link"><a href="{% url 'first:logout' %}">Logout</a></li>
                         {% else %}
-                            <li class="nav-item"><a href="{% url 'first:login' %}">Login</a></li>
-                            <li class="nav-item"><a href="{% url 'first:signup' %}">Sign Up</a></li>
+                            <li class="nav-link"><a href="{% url 'first:login' %}">Login</a></li>
+                            <li class="nav-link"><a href="{% url 'first:signup' %}">Sign Up</a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -179,30 +178,34 @@
     </section>
     <!-- End Section -->
 
-    <!-- Start Map -->
-    <div id="mapid" style="width: 100%; height: 300px;"></div>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-    <script>
-        var mymap = L.map('mapid').setView([-23.013104, -43.394365, 13], 13);
+{% comment %}    <!-- Start Map -->
+<div id="mapid" style="width: 10em; height: 300px;"></div>
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+<script>
+    var mymap = L.map('mapid').setView([-23.013104, -43.394365], 13);
 
-        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-            maxZoom: 18,
-            attribution: 'Steve Rebrand | Template Design by <a href="https://steve-bico-3405a55fbd7c.herokuapp.com/">SteveRebrand</a> | Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-                '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-                'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-            id: 'mapbox/streets-v11',
-            tileSize: 512,
-            zoomOffset: -1
-        }).addTo(mymap);
+    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=sk.eyJ1IjoiYmljb3N0ZXZlIiwiYSI6ImNscWZobjM1NTB6anoyaW1lMWVzaWc5Y3EifQ.jIbgNbBJ1FMooFJC4puW9A', {
+        maxZoom: 18,
+        attribution: 'Steve Rebrand | Template Design by ' +
+            '<a href="https://steve-bico-3405a55fbd7c.herokuapp.com/">SteveRebrand</a> | Map data &copy; ' +
+            '<a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+        id: 'mapbox/streets-v11',
+        tileSize: 512,
+        zoomOffset: -1
+    }).addTo(mymap);
 
-        L.marker([-23.013104, -43.394365, 13]).addTo(mymap)
-            .bindPopup("<b>Jolly</b> baby shop and accessories<br />Location.").openPopup();
+    L.marker([-23.013104, -43.394365]).addTo(mymap)
+        .bindPopup("<b>Jolly</b> baby shop and accessories<br />Location.").openPopup();
 
-        mymap.scrollWheelZoom.disable();
-        mymap.touchZoom.disable();
-    </script>
-    <!-- Ena Map -->
-
+    mymap.scrollWheelZoom.disable();
+    mymap.touchZoom.disable();
+</script>
+<!-- End Map -->{% endcomment %}
+{##map alternative#}
+    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Parklands%20Nairobi+(Jolly)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population mapping</a></iframe></div>
+{#    map ends here##########}
     <!-- Start Contact -->
     <div class="container py-5">
         <div class="row py-5">
