Additional template changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
 
 
     <!-- Start Categories of The Month -->
-    <section class="container  py-5">
+    <section class="container  py-5 below">
         <div class="row text-center pt-3">
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Best Selling Categories</h1>
@@ -251,7 +251,7 @@
 
 
     <!-- Start Featured Product -->
-    <section class="bg-light">
+    <section class="bg-light below">
         <div class="container py-5">
             <div class="row text-center py-3">
                 <div class="col-lg-6 m-auto">
@@ -347,7 +347,7 @@
 
 
     <!-- Start Footer -->
-    <footer class="bg-dark" id="tempaltemo_footer">
+    <footer class="bg-dark below" id="tempaltemo_footer">
         <div class="container">
             <div class="row">
 
