--- a/templates/about.html
+++ b/templates/about.html
@@ -231,7 +231,7 @@
                         <div class="col ">
                             <div class="carousel  slide carousel-multi-item pt-2 pt-md-0" id="templatemo-slide-brand" data-bs-ride="carousel">
                                 <!--Slides-->
-                                <div class="carousel-inner  product-links-wap" role="listbox">
+                                <div class=" sliderr carousel-inner  product-links-wap" role="listbox">
 
                                     <!--First slide-->
                                     <div class="carousel-item  active">
