--- a/templates/shop-single.html
+++ b/templates/shop-single.html
@@ -275,11 +275,43 @@
                                 <li>Design: {{ product.design }}</li>
                                 <li>Special Features: {{ product.special_features }}</li>
                                 <li>Wash Care: {{ product.care_instructions }}</li>
-
                             </ul>
 
-                            <form action="" method="GET">
-                                <input type="hidden" name="product-title" value="Activewear">
+{#                            <form action="" method="GET">#}
+{#                                <input type="hidden" name="product-title" value="Activewear">#}
+{#                                <div class="row">#}
+{#                                    <div class="col-auto">#}
+{#                                        <ul class="list-inline pb-3">#}
+{#                                            <li class="list-inline-item">Size :#}
+{#                                                <input type="hidden" name="product-size" id="product-size" value="S">#}
+{#                                            </li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success btn-size">S</span></li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success btn-size">M</span></li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success btn-size">L</span></li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success btn-size">XL</span></li>#}
+{#                                        </ul>#}
+{#                                    </div>#}
+{#                                    <div class="col-auto">#}
+{#                                        <ul class="list-inline pb-3">#}
+{#                                            <li class="list-inline-item text-right">#}
+{#                                                Quantity#}
+{#                                                <input type="hidden" name="product-quanity" id="product-quanity" value="1">#}
+{#                                            </li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success" id="btn-minus">-</span></li>#}
+{#                                            <li class="list-inline-item"><span class="badge bg-secondary" id="var-value">1</span></li>#}
+{#                                            <li class="list-inline-item"><span class="btn btn-success" id="btn-plus">+</span></li>#}
+{#                                        </ul>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <div class="row pb-3">#}
+{#                                    <div class="col d-grid text-center">#}
+{#                                        <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">Buy</button>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </form>#}
+
+                            <form class="add-to-cart-form" data-product-id="{{ product.id }}" method="post" action="{% url 'first:add_to_cart' product.id %}">
+                                {% csrf_token %}
                                 <div class="row">
                                     <div class="col-auto">
                                         <ul class="list-inline pb-3">
@@ -289,14 +321,14 @@
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">S</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">M</span></li>
                                             <li class="list-inline-item"><span class="btn btn-success btn-size">L</span></li>
-                                            <li class="list-inline-item"><span class="btn btn-success btn-size">XL</span></li>
+                                           <li class="list-inline-item"><span class="btn btn-success btn-size">XL</span></li>
                                         </ul>
                                     </div>
                                     <div class="col-auto">
                                         <ul class="list-inline pb-3">
                                             <li class="list-inline-item text-right">
                                                 Quantity
-                                                <input type="hidden" name="product-quanity" id="product-quanity" value="1">
+                                                <input type="hidden" name="product-quantity" id="product-quantity" value="1">
                                             </li>
                                             <li class="list-inline-item"><span class="btn btn-success" id="btn-minus">-</span></li>
                                             <li class="list-inline-item"><span class="badge bg-secondary" id="var-value">1</span></li>
@@ -306,21 +338,23 @@
                                 </div>
                                 <div class="row pb-3">
                                     <div class="col d-grid text-center">
-                                     <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">Buy</button>
-                    </div>
-                <div class="col d-grid text-center">
-                <form class="add-to-cart-form" data-product-id="{{ product.id }}" method="post" action="{% url 'first:add_to_cart' product.id %}">
-                        {% csrf_token %}
-                          <button class="btn btn-primary text-white" type="submit" name="add_to_cart_button">
-                            Add To Cart
-                          </button>
-                 </form>
-{#        <button type="submit" class="btn btn-success btn-lg" name="add_to_cart_button" value="addtocart"></button>#}
-
-</div>
+                                        <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">Buy</button>
+                                    </div>
+                                <div class="col d-grid text-center">
+                                <button class="btn btn-primary text-white" type="submit" name="add_to_cart_button">Add To Cart</button>
                                 </div>
+                                </div>
+
                             </form>
 
+{#                            <div class="col d-grid text-center">#}
+{#                                <form class="add-to-cart-form" data-product-id="{{ product.id }}" method="post" action="{% url 'first:add_to_cart' product.id %}">#}
+{#                                    {% csrf_token %}#}
+{#                                    <button class="btn btn-primary text-white" type="submit" name="add_to_cart_button">#}
+{#                                        Add To Cart#}
+{#                                    </button>#}
+{#                                </form>#}
+{#                            </div>#}
                         </div>
                     </div>
                 </div>
@@ -342,13 +376,29 @@
                 <div class="p-2 pb-3">
                     <div class="product-wap card rounded-0">
                         <div class="card  rounded-0">
-                            <img class="card-img shop-img rounded-0  img-fluid" src="{% static 'img/categorythree.jpg' %}">
+                            <img class="card-img shop-img rounded-0  img-fluid" src="{{related_product.main_image.url}} %}">
                             <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
-                                <ul class="list-unstyled">
-                                    <li><a class="btn btn-success text-white" href="{% url 'first:shop-single' related_product.id %}"><i class="far fa-heart"></i></a></li>
-                                    <li><a class="btn btn-success text-white mt-2" href="{% url 'first:shop-single' related_product.id %}"><i class="far fa-eye"></i></a></li>
-                                    <li><a class="btn btn-success text-white mt-2" href="{% url 'first:shop-single' related_product.id %}}"><i class="fas fa-cart-plus"></i></a></li>
-                                </ul>
+                                    <ul class="list-unstyled">
+                                         <form class="like-form" data-product-id="{{ related_product.id }}" method="post" action="{% url 'first:like_product' related_product.id %}">
+                                        {% csrf_token %}
+                                        <li>
+                                            <!-- Change <a> to <button> and add type="submit" and name attributes -->
+                                            <button class="btn btn-success text-white" type="submit" name="like_button">
+                                                <i class="far fa-heart"></i>
+                                            </button>
+                                        </li>
+                                    </form>
+                                        <!-- Implement the "Add to Cart" functionality -->
+                                        <li><a class="btn btn-success text-white mt-2" href="{% url 'first:shop-single' related_product.id  %}"><i class="far fa-eye"></i></a></li>
+                                        <li>
+                                             <form class="add-to-cart-form" data-product-id="{{ related_product.id }}" method="post" action="{% url 'first:add_to_cart' related_product.id %}">
+                                            {% csrf_token %}
+                                              <button class="cartbtn btn btn-primary text-white" type="submit" name="add_to_cart_button">
+                                                <i class="fas fa-cart-plus"></i>
+                                              </button>
+                                             </form>
+                                        </li>
+                                    </ul>
                             </div>
                         </div>
                         <div class="card-body">
